--- a/diederen7/README
+++ b/diederen7/README
@@ -1,5 +1,9 @@
 Bug report May 16, 2022, from Arnaud Diederen.
 
+The object file is actually broken
+and this is revealed by readobjmacho and
+dwarfdump as of 26 September 2025
+
 ----------------
 I would like to attract your attention to the following block:
 ===
@@ -40,8 +44,8 @@ DW_AT_comp_dir       (1B;strp) /Users/arnaud/idasrc/tmp/aircrack-ng-1.1-patched/
 DW_AT_APPLE_optimized (3FE1;flag) yes(1)
 ===
 
-Notice the `DW_AT_entry_pc`. If you add it to the lochist entries'
-bounds, you'll notice they fall right within those of the lexical
+Notice the `DW_AT_entry_pc`. If you add it to the loclist entries
+bounds, you will notice they fall right within those of the lexical
 block.
 
 ---
@@ -55,5 +59,5 @@ Currently, we have the following in our plugin, to fix this:
     end_ea += off;
     …
 ===
-…but I thought I'd let you know, since it _seems_ it should be applied
+…but I thought I would let you know, since it _seems_ it should be applied
 automatically by libdwarf. 
