Mentions new file b.macho : sometimes useful to have as b.macho has no dSYM. 	modified:   macho-kagstrom/README 	new file:   macho-kagstrom/b.macho

--- a/macho-kagstrom/README
+++ b/macho-kagstrom/README
@@ -11,4 +11,7 @@ had not been called.
 Now we call whenever needing the size or address
 of that section (we added the call in three places).
 
+b.macho is 'a' but renamed so no dSYM
+can be found. Sometimes useful to have.
+
 September 2025.
