We do not test reading an archive, so we turn the testcase into xz to save space and otherwise ignore the testcase. See sarubbo-6/README 	deleted:    sarubbo-6/1.crashes.bin 	new file:   sarubbo-6/1.crashes.bin.xz 	modified:   sarubbo-6/README

--- a/sarubbo-6/README
+++ b/sarubbo-6/README
@@ -1,5 +1,10 @@
 Agostino Surabbo provided this testcase.
+The file is an archive and we stopped
+reading archives some years ago.
 
+Now altered to be 1.crashes.bin.xz
+to save space. The object no longer used at all
+so we never expand.
 
 dwarfdump -ka 1.crashes.bin
 
